--- a/lec 08/css/style.css
+++ b/lec 08/css/style.css
@@ -24,3 +24,35 @@ https://static.pexels.com/photos/133459/pexels-photo-133459.jpeg
 https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg
 */
 
+body {
+    margin: 0;
+    background-color: burlywood;
+}
+
+img {
+    width: 400px;
+    height: 300px;
+    margin: 10px;
+    transition: all 0.5s;
+    box-shadow: 5px 5px 5px gray;
+}
+
+img:hover {
+    transform: scale(1.1);
+}
+
+h1 {
+    font-family: 'Caveat', cursive;
+    border-bottom: 2px solid gray;
+    border-right: 2px solid gray;
+    box-shadow: 4px 4px 4px gray;
+    width: 600px;
+    font-size: 2em;
+    margin: 10px 0 0 0;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
